--- a/package.json
+++ b/package.json
@@ -1,55 +1,58 @@
 {
-  "name": "meetup-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/inter": "^4.5.15",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^28.1.8",
-    "@types/node": "^12.20.55",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "@viselect/react": "^3.2.7",
-    "@vkruglikov/react-telegram-web-app": "^1.8.0",
-    "crypto-js": "^4.1.1",
-    "date-fns": "^2.30.0",
-    "firebase": "^9.22.0",
-    "framer-motion": "^6.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/crypto-js": "^4.1.1"
-  }
+    "name": "meetup-frontend",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@chakra-ui/react": "^2.6.1",
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@fontsource/inter": "^4.5.15",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/node": "^12.20.55",
+        "@types/react": "^18.2.6",
+        "@types/react-dom": "^18.2.4",
+        "@viselect/react": "^3.2.7",
+        "@vkruglikov/react-telegram-web-app": "^1.8.0",
+        "crypto-js": "^4.1.1",
+        "date-fns": "^2.30.0",
+        "firebase": "^9.22.0",
+        "framer-motion": "^6.5.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^3.11.0",
+        "react-router-dom": "^6.11.1",
+        "react-scripts": "5.0.1",
+        "react-testing-library": "^8.0.1",
+        "typescript": "^4.9.5",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "jest --watch",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@types/crypto-js": "^4.1.1",
+        "@types/jest": "^29.5.1",
+        "jest-environment-jsdom": "^29.5.0",
+        "ts-jest": "^29.1.0"
+    }
 }
