--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,12 @@ name: GH Pages Deploy
 
 on:
     push:
-        branches: [main]
+        branches: [master]
         paths-ignore:
             - "*.md"
 
     pull_request:
-        branches: [main]
+        branches: [master]
         paths-ignore:
             - "*.md"
 
