--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,25 +23,25 @@ jobs:
               with:
                   persist-credentials: false
 
-            - name: Get yarn cache
-              id: yarn-cache
-              run: echo "::set-output name=dir::$(yarn cache dir)"
+            - name: Get npm cache
+              id: npm-cache
+              run: echo "::set-output name=dir::$(npm cache dir)"
 
             - uses: actions/cache@v1
               with:
-                  path: ${{ steps.yarn-cache.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/package.json') }} # TODO: Use yarn.lock instead, if that file exists in your repo.
+                  path: ${{ steps.npm-cache.outputs.dir }}
+                  key: ${{ runner.os }}-npm-${{ hashFiles('**/package.json') }} # TODO: Use npm.lock instead, if that file exists in your repo.
                   restore-keys: |
-                      ${{ runner.os }}-yarn-
+                      ${{ runner.os }}-npm-
 
             - name: Install dependencies 🔧
-              run: yarn install
+              run: npm install
 
             # - name: Test 🚨
-            #   run: yarn test
+            #   run: npm test
 
             - name: Build 🏗️
-              run: yarn build
+              run: npm run build
 
             - name: Deploy to GH Pages 🚀
               if: ${{ github.event_name != 'pull_request' }}
