--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,16 +23,16 @@ jobs:
               with:
                   persist-credentials: false
 
-            - name: Get npm cache
-              id: npm-cache
-              run: echo "::set-output name=dir::$(npm cache dir)"
+            # - name: Get npm cache
+            #   id: npm-cache
+            #   run: echo "::set-output name=dir::$(npm cache dir)"
 
-            - uses: actions/cache@v1
-              with:
-                  path: ${{ steps.npm-cache.outputs.dir }}
-                  key: ${{ runner.os }}-npm-${{ hashFiles('**/package.json') }} # TODO: Use npm.lock instead, if that file exists in your repo.
-                  restore-keys: |
-                      ${{ runner.os }}-npm-
+            # - uses: actions/cache@v1
+            #   with:
+            #       path: ${{ steps.npm-cache.outputs.dir }}
+            #       key: ${{ runner.os }}-npm-${{ hashFiles('**/package.json') }} # TODO: Use npm.lock instead, if that file exists in your repo.
+            #       restore-keys: |
+            #           ${{ runner.os }}-npm-
 
             - name: Install dependencies 🔧
               run: npm install
@@ -41,7 +41,7 @@ jobs:
             #   run: npm test
 
             - name: Build 🏗️
-              run: npm run build
+              run: npm build
 
             - name: Deploy to GH Pages 🚀
               if: ${{ github.event_name != 'pull_request' }}
