--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "firebase": "^9.22.0",
         "framer-motion": "^6.5.1",
         "react": "^18.2.0",
+        "react-device-detect": "^2.2.3",
         "react-dom": "^18.2.0",
         "react-icons": "^3.11.0",
         "react-router-dom": "^6.11.1",
