--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: GH Pages Deploy
 
-env: 
-  CI: false
+env:
+    CI: false
 on:
     push:
         branches: [master]
@@ -44,6 +44,11 @@ jobs:
 
             - name: Build 🏗️
               run: npm run build
+              env:
+                  REACT_APP_BOT_TOKEN: ${{ secrets.REACT_APP_BOT_TOKEN }}
+                  REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+                  REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+                  REACT_APP_COLLECTION_NAME: ${{ secrets.REACT_APP_COLLECTION_NAME }}
 
             - name: Deploy to GH Pages 🚀
               if: ${{ github.event_name != 'pull_request' }}
