--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@types/crypto-js": "^4.1.1",
         "@types/jest": "^29.5.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "jest-environment-jsdom": "^29.5.0",
         "ts-jest": "^29.1.0"
     }
