--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-testing-library": "^8.0.1",
         "react-type-animation": "^3.1.0",
         "react-usestateref": "^1.0.8",
+        "telegram-login-button": "^0.0.3",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
