--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
                   REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
                   REACT_APP_COLLECTION_NAME: ${{ secrets.REACT_APP_COLLECTION_NAME }}
                   REACT_APP_BASE_URL: ${{ secrets.REACT_APP_BASE_URL }}
+                  REACT_APP_BOT_NAME: ${{ secrets.REACT_APP_BOT_NAME }}
 
             - name: Deploy to GH Pages 🚀
               if: ${{ github.event_name != 'pull_request' }}
